@startuml

class Banco {
    -usuarios: List<Usuario>
    -cuentas: List<Cuenta>

    +crearCuenta(usuario: Usuario): Cuenta
    +crearCajaAhorro(tasaInteres: double): CajaDeAhorro
    +transferir(origenId: String, destinoId: String, monto: double): boolean
    +buscarCuenta(id: String): Cuenta
}

class Usuario {
    -id: String
    -nombre: String
    -cuentas: List<Cuenta>

    +obtenerCuentas(): List<Cuenta>
}

class Cuenta {
    -id: String
    -titular: Usuario
    -saldo: double

    +depositar(monto: double): boolean
    +retirar(monto: double): boolean
    +obtenerSaldo(): double
}

class CajaDeAhorro {
    -tasaInteres: double

    +calcularInteres(meses: int): double
    +aplicarInteres(meses: int): void
}

Banco "1" *-- "*" Usuario: administra
Banco "1" *-- "*" Cuenta: registra
Usuario "1" o-- "*" Cuenta: posee
Cuenta <|-- CajaDeAhorro

@enduml